--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-  	<meta charset="utf-8">
+<head>
+    <script type="text/javascript">
+	  function ali() {
+		window.pay.alipay("service=mobile.securitypay.pay&_input_charset=utf-8&partner=2088311868782039&seller_id=2088311868782039&payment_type=1&out_trade_no=30011&notify_url=http%3A%2F%2F112.124.50.175%3A4100%2Fapi%2Fv1%2Falipay%2Fnotify&subject=%E6%89%8B%E6%9C%BAAPP%E5%9C%A8%E7%BA%BF%E6%94%AF%E4%BB%98%E8%B6%85%E6%9C%9F%E8%B4%B9%E7%94%A8&total_fee=0.01&body=%E6%89%8B%E6%9C%BAAPP%E5%9C%A8%E7%BA%BF%E6%94%AF%E4%BB%98%E8%B6%85%E6%9C%9F%E8%B4%B9%E7%94%A8&sign_type=RSA&sign=i%2FPcjolVyjtKF%2BrgNCaPpaJZ0hQuaCN1DR0fwWPeA1yQaosbfcc67Oi2Of05%0A18B1jS4KApNg5eb35H9G5bZ0tikBP08b7OHQtqJpPuzcJjuEqwSolbom5lkS%0AJmRLP5s%2B9MePHl1gv6qBJhS58hjQLfoLZ2xgugxc3a9vhaqPO00%3D%0A");
+	}
+	 function weixin() {
+		window.pay.weixin();
+	}
+
+    </script>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0, maximum-scale=2.0"/>
 
-  </head>
+</head>
 
 
-  <body>
-   <div style="text-align:center;">
-      <p><a style="font-size:40px;" href="alipay://alipayclient/?%7B%0A%20%20%22fromAppUrlScheme%22%20%3A%20%22com.sudiyi.client.appstore%22%2C%0A%20%20%22requestType%22%20%3A%20%22SafePay%22%2C%0A%20%20%22dataString%22%20%3A%20%22service%3Dmobile.securitypay.pay%26_input_charset%3Dutf-8%26partner%3D2088311868782039%26seller_id%3D2088311868782039%26payment_type%3D1%26out_trade_no%3D29937%26notify_url%3Dhttp%253A%252F%252F112.124.50.175%253A4100%252Fapi%252Fv1%252Falipay%252Fnotify%26subject%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26total_fee%3D0.01%26body%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26sign_type%3DRSA%26sign%3DSrbYVbPsDVDF3po%252Bo8Gr9%252F%252Ba8tLC9uZusNpriT30lcpzEna%252B%252FvRXmtYi4sKd%250A7EZ%252BeTSxqne4UihgPiE%252FZzVUV0%252Fc4gpsSRHjVVRE03cosbyiDlSDQQT3rGdF%250AhVmn9hKh96sJOfiGQTMP%252B0LvOsfTkiC5DyaDla09MEnDqfuXdNs%253D%250A%26bizcontext%3D%5C%22%7B%5C%22appkey%5C%22%3A%5C%222014052600006128%5C%22%7D%5C%22%22%0A%7D">支付宝</a></p>
+<body>
+<div style="text-align:center;">
+    <p><a style="font-size:40px;"
+          href="alipay://alipayclient/?%7B%0A%20%20%22fromAppUrlScheme%22%20%3A%20%22com.sudiyi.client.appstore%22%2C%0A%20%20%22requestType%22%20%3A%20%22SafePay%22%2C%0A%20%20%22dataString%22%20%3A%20%22service%3Dmobile.securitypay.pay%26_input_charset%3Dutf-8%26partner%3D2088311868782039%26seller_id%3D2088311868782039%26payment_type%3D1%26out_trade_no%3D29937%26notify_url%3Dhttp%253A%252F%252F112.124.50.175%253A4100%252Fapi%252Fv1%252Falipay%252Fnotify%26subject%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26total_fee%3D0.01%26body%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26sign_type%3DRSA%26sign%3DSrbYVbPsDVDF3po%252Bo8Gr9%252F%252Ba8tLC9uZusNpriT30lcpzEna%252B%252FvRXmtYi4sKd%250A7EZ%252BeTSxqne4UihgPiE%252FZzVUV0%252Fc4gpsSRHjVVRE03cosbyiDlSDQQT3rGdF%250AhVmn9hKh96sJOfiGQTMP%252B0LvOsfTkiC5DyaDla09MEnDqfuXdNs%253D%250A%26bizcontext%3D%5C%22%7B%5C%22appkey%5C%22%3A%5C%222014052600006128%5C%22%7D%5C%22%22%0A%7D">支付宝</a>
+    </p>
 
-<p><a style="font-size:40px;" href="weixin://app/wxa20bc8d79265776f/pay/?nonceStr=cYQrafaKuVYHmV26&package=Sign%3DWXPay&partnerId=1245461602&prepayId=wx201509061027554102aa1cc50049567490&timeStamp=1441506475&sign=A1941674F5C05A29FA2C350D3D472DB0&signType=SHA1">微信</a></p>
+    <p><a style="font-size:40px;"
+          href="weixin://app/wxa20bc8d79265776f/pay/?nonceStr=cYQrafaKuVYHmV26&package=Sign%3DWXPay&partnerId=1245461602&prepayId=wx201509061027554102aa1cc50049567490&timeStamp=1441506475&sign=A1941674F5C05A29FA2C350D3D472DB0&signType=SHA1">微信</a>
+    </p>
 </div>
+<input type="button" onclick="ali()" value="Js支付宝"/>
+<br/>
 
-   
-  </body>
+</body>
 </html>
 
