--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <div style="text-align:center;">
     <h1>iOS 直接支付</h1>
-    <p><a style="font-size:40px;"
+    <p><a style="font-size:30px;"
           href="alipay://alipayclient/?%7B%0A%20%20%22fromAppUrlScheme%22%20%3A%20%22com.sudiyi.client.appstore%22%2C%0A%20%20%22requestType%22%20%3A%20%22SafePay%22%2C%0A%20%20%22dataString%22%20%3A%20%22service%3Dmobile.securitypay.pay%26_input_charset%3Dutf-8%26partner%3D2088311868782039%26seller_id%3D2088311868782039%26payment_type%3D1%26out_trade_no%3D29937%26notify_url%3Dhttp%253A%252F%252F112.124.50.175%253A4100%252Fapi%252Fv1%252Falipay%252Fnotify%26subject%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26total_fee%3D0.01%26body%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26sign_type%3DRSA%26sign%3DSrbYVbPsDVDF3po%252Bo8Gr9%252F%252Ba8tLC9uZusNpriT30lcpzEna%252B%252FvRXmtYi4sKd%250A7EZ%252BeTSxqne4UihgPiE%252FZzVUV0%252Fc4gpsSRHjVVRE03cosbyiDlSDQQT3rGdF%250AhVmn9hKh96sJOfiGQTMP%252B0LvOsfTkiC5DyaDla09MEnDqfuXdNs%253D%250A%26bizcontext%3D%5C%22%7B%5C%22appkey%5C%22%3A%5C%222014052600006128%5C%22%7D%5C%22%22%0A%7D">支付宝</a>
     </p>
 
-    <p><a style="font-size:40px;"
+    <p><a style="font-size:30px;"
           href="weixin://app/wxa20bc8d79265776f/pay/?nonceStr=cYQrafaKuVYHmV26&package=Sign%3DWXPay&partnerId=1245461602&prepayId=wx201509061027554102aa1cc50049567490&timeStamp=1441506475&sign=A1941674F5C05A29FA2C350D3D472DB0&signType=SHA1">微信</a>
     </p>
 </div>
@@ -52,7 +52,7 @@
         button.innerHTML = '支付宝'
         button.onclick = function(e) {
             e.preventDefault()
-            bridge.callHandler('sudiyiclientCallAlipay', {'order': 'bar'}, function(response) {
+            bridge.callHandler('sudiyiclientCallAlipay', {'order': 'service=mobile.securitypay.pay&_input_charset=utf-8&partner=2088311868782039&seller_id=2088311868782039&payment_type=1&out_trade_no=30063&notify_url=http%3A%2F%2F112.124.50.175%3A4100%2Fapi%2Fv1%2Falipay%2Fnotify&subject=%E6%89%8B%E6%9C%BAAPP%E5%9C%A8%E7%BA%BF%E6%94%AF%E4%BB%98%E8%B6%85%E6%9C%9F%E8%B4%B9%E7%94%A8&total_fee=0.01&body=%E6%89%8B%E6%9C%BAAPP%E5%9C%A8%E7%BA%BF%E6%94%AF%E4%BB%98%E8%B6%85%E6%9C%9F%E8%B4%B9%E7%94%A8&sign_type=RSA&sign=vwdMJI1TZZHuIOKLrvfUoS8oK2Ke5Pc2l5nL1URFf5%2BZm58IAQpgavh1dgz7%0A4f3RMCYk7dxNH%2BT0iOprcbTAdJKFukkoR9xGlnJoBkIsnDSBWX5km4JyGO32%0ALjV8IVlIpa7%2FgK%2FGVo%2Bcn4uf9jyDts6bK3P4Xbi4pmU4soIv9I4%3D%0A'}, function(response) {
                 log('alipay got response', response)
             })
         }
@@ -63,7 +63,14 @@
         callbackButton.innerHTML = '微信'
         callbackButton.onclick = function(e) {
             e.preventDefault()
-            bridge.callHandler('sudiyiclientCallWechatPay', {'order': 'bar'}, function(response) {
+            bridge.callHandler('sudiyiclientCallWechatPay', {'order': {'appid': 'wxa20bc8d79265776f',
+    'noncestr': 'Zq59M9xTQvn7iyUW',
+    'out_trade_no': 30065,
+    'package': 'Sign=WXPay',
+    'partnerid': 1245461602,
+    'prepayid': 'wx201509101608335f6d50ab940106986087',
+    'sign': '07612079F736081C53988096CD3F8857',
+    'timestamp': 1441872513}}, function(response) {
                 log('wechat pay got response', response)
             })
         }
