--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             e.preventDefault()
             bridge.callHandler('sudiyiclientCallWechatPay', {'order': {'appid': 'wxa20bc8d79265776f',
     'noncestr': 'Zq59M9xTQvn7iyUW',
-    'out_trade_no': 30065,
+    'out_trade_no': '30065',
     'package': 'Sign=WXPay',
-    'partnerid': 1245461602,
+    'partnerid': '1245461602',
     'prepayid': 'wx201509101608335f6d50ab940106986087',
     'sign': '07612079F736081C53988096CD3F8857',
     'timestamp': 1441872513}}, function(response) {
