--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<div style="text-align:center;">
+    <div style="text-align:center;">
     <h1>iOS 直接支付</h1>
     <p><a style="font-size:30px;"
           href="alipay://alipayclient/?%7B%0A%20%20%22fromAppUrlScheme%22%20%3A%20%22com.sudiyi.client.appstore%22%2C%0A%20%20%22requestType%22%20%3A%20%22SafePay%22%2C%0A%20%20%22dataString%22%20%3A%20%22service%3Dmobile.securitypay.pay%26_input_charset%3Dutf-8%26partner%3D2088311868782039%26seller_id%3D2088311868782039%26payment_type%3D1%26out_trade_no%3D29937%26notify_url%3Dhttp%253A%252F%252F112.124.50.175%253A4100%252Fapi%252Fv1%252Falipay%252Fnotify%26subject%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26total_fee%3D0.01%26body%3D%25E6%2589%258B%25E6%259C%25BAAPP%25E5%259C%25A8%25E7%25BA%25BF%25E6%2594%25AF%25E4%25BB%2598%25E8%25B6%2585%25E6%259C%259F%25E8%25B4%25B9%25E7%2594%25A8%26sign_type%3DRSA%26sign%3DSrbYVbPsDVDF3po%252Bo8Gr9%252F%252Ba8tLC9uZusNpriT30lcpzEna%252B%252FvRXmtYi4sKd%250A7EZ%252BeTSxqne4UihgPiE%252FZzVUV0%252Fc4gpsSRHjVVRE03cosbyiDlSDQQT3rGdF%250AhVmn9hKh96sJOfiGQTMP%252B0LvOsfTkiC5DyaDla09MEnDqfuXdNs%253D%250A%26bizcontext%3D%5C%22%7B%5C%22appkey%5C%22%3A%5C%222014052600006128%5C%22%7D%5C%22%22%0A%7D">支付宝</a>
@@ -18,7 +18,7 @@
     <p><a style="font-size:30px;"
           href="weixin://app/wxa20bc8d79265776f/pay/?nonceStr=cYQrafaKuVYHmV26&package=Sign%3DWXPay&partnerId=1245461602&prepayId=wx201509061027554102aa1cc50049567490&timeStamp=1441506475&sign=A1941674F5C05A29FA2C350D3D472DB0&signType=SHA1">微信</a>
     </p>
-</div>
+    </div>
 
     <script>
     window.onerror = function(err) {
@@ -79,6 +79,24 @@
     <div id='buttons' style="text-align:center;">
     <h1>iOS app 中转支付</h1></div> 
     <div id='log' style="text-align:center;"></div>
+
+
+    <div style="text-align:center;">
+                <a href="sudiyiclient://safari">在系统浏览器中打开</a>
+        </br>
+                <a href="sudiyiclient://qrcode.openbox">扫码开箱</a>
+        </br>
+                <a href="sudiyiclient://express.query">查快递</a>
+        </br>
+                <a href="sudiyiclient://express.delivery">寄快递</a>
+        </br>
+                <a href="sudiyiclient://order.resv">物品存放</a>
+        </br>
+                <a href="sudiyiclient://order.inbox">取件列表</a>
+        </br>
+                <a href="sudiyiclient://coupon.elife">周边商家</a>
+        </br>
+    </div>
 
 
 </body>
