--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <div style="text-align:center;">
-                <a href="sudiyiclient://safari">在系统浏览器中打开</a>
+                <a href="sudiyiclient://open.third">在系统浏览器中打开</a>
         </br>
                 <a href="sudiyiclient://qrcode.openbox">扫码开箱</a>
         </br>
@@ -94,7 +94,9 @@
         </br>
                 <a href="sudiyiclient://order.inbox">取件列表</a>
         </br>
-                <a href="sudiyiclient://coupon.elife">周边商家</a>
+                <a href="sudiyiclient://coupon.elife">易生活优惠卷</a>
+        </br>
+                <a href="sudiyiclient://shop.elife">易生活商家</a>
         </br>
     </div>
 
