--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"script_cipher":"vwTM65K1zZm1w+zn46CfYS7a2PLSm0TpRv+0Ihqfx9FVAJM3UrI0zxmsDe3ZxwpFxm1Mm2Cykoc3vstnk1sLeZFejy+jKEGRIsMgJNNjT\/B3mXECl3TxW6sSJG8mx+Wv","language":"javascript","sign":"B0sjgT0oE1bADF\/Aw5GzLNSLwRahdg1RHz6FNo7ltD5A268HC43fyAyrV9QuBLQn21v2BWuqRUq1mbo4FdVG3Yl9d9pfO1TecwPEoIxmcOifr4onZv1z5F5SkP6sa28tbUU0X\/+g9euX4bAH0xPtcFnyMrVPDIYOM3CScSz\/LTCLSH4MWUQMybhotMqxQ095u\/p5ZvN3wPYARSG+eUTF+iisuPt0tWFLVYdhLcyNd+FfyWD\/YUbeg484CK+eM7kOSOGv7JDG9lX6gv90kRw41u1ui2ojQYTg0Y1Z7spjZFHtOW51HBxv3tfv2KnomE4ciyC4YRUc39AsYnFc81gtDA==","version":1,"mode":1,"algorithm_ver":1}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"script_cipher":"Z7DDCdHoDC97\/Av2+IHnBwh0bIy0Q+5eKC8eN3RN4PSBfHcGt261NQ5G7GH5lg3EB2I3AqWVEC2v1\/8i3Cgg4xikVklTfEw4yuAxWxrgFs2jHBQjocp\/jL7KFIzjdXdE","language":"javascript","sign":"B0sjgT0oE1bADF\/Aw5GzLNSLwRahdg1RHz6FNo7ltD5A268HC43fyAyrV9QuBLQn21v2BWuqRUq1mbo4FdVG3Yl9d9pfO1TecwPEoIxmcOifr4onZv1z5F5SkP6sa28tbUU0X\/+g9euX4bAH0xPtcFnyMrVPDIYOM3CScSz\/LTCLSH4MWUQMybhotMqxQ095u\/p5ZvN3wPYARSG+eUTF+iisuPt0tWFLVYdhLcyNd+FfyWD\/YUbeg484CK+eM7kOSOGv7JDG9lX6gv90kRw41u1ui2ojQYTg0Y1Z7spjZFHtOW51HBxv3tfv2KnomE4ciyC4YRUc39AsYnFc81gtDA==","version":1,"mode":1,"algorithm_ver":1}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
