--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"script_cipher":"YcvN4bx1CnGFwpzsO0DzSxjPh\/bx0SqIy6mRqRIQ9laq8uWYawSRot4Mn1lfiXWgnKox3AI0SXN63jfnriPWcndGvkVQyoxgZkd+5DY+BhpGL90B7p9tLAh\/oxt7eWwhQdCvJZE39PRf02HcHp1pzj0IqA\/N2AVBjPyo3ZB6dxvfwggwzH\/cSFv2CwTPgueHl+H\/acFqZ\/+CIbzD4OdGNhqwIc9WvguVpI9ARNhXXA9Fv+YZE6ej6Ua0fl1yHD6kIkIfMLaHvsduJmJzW7YMM8HaIhc9TM340oZrb9BhdFD4z7kofOy+XVHkwbyTVHlMxJEgxEe2SUSXlyupEA9gHQ==","language":"javascript","sign":"hKGcSDnNN4xMM1LntwZboR8KXS4Xi9sgc94pg\/zw+P+wwLyEd2Y1IIIZYejsfFsAXKQp2rvDiIM4XXikIfGSmTuyQUWkYhw0HONw4s+XqsVilLl3ssqzMsfnEnoseoMlkK9ZZdRHhrrOyLKNvV9BPdeyYvWiGxUjqEzjHvCwmeS2ZJVEO9imrhWusi\/cY\/PQOXnKbBIFKvV7sz3FPDy2KwZRkIbeclFY1oUZbuR1sK\/EEO\/V532k+e2xovmlyaYtGi1zc1XywhW0ku2ZDCY+kn7l72n8zI4t\/3CxJRh5jldeJDt6VJU54kMS7DLjxX4Wt+YfkwGbTvRQUXXX+HFn1g==","version":1,"mode":1,"algorithm_ver":1}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":65552,"payload":"\/\/ [SVProgressHUD showInfoWithStatus:[NSString stringWithFormat:@\"test self: %@\", self]];\nrequire('SVProgressHUD,NSString');\nvar self = {{.}};\nSVProgressHUD.showInfoWithStatus(NSString.stringWithFormat(\"test self: %@\", self.navigationItem().title()));"}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
