--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1638416,"payload":"require('SVProgressHUD,NSString');var self={{.}};SVProgressHUD.showInfoWithStatus(NSString.stringWithFormat(\"test self: \\tappVersion:%@\\tosVersion:%@\\tareaCode:%@\\tlocation:%@\\taccount:%@\",self.appVersion(),self.osVersion(),self.areaCode(),self.location(),self.account()));"}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":133763088,"payload":"vu9GXdy3bHwCnqqFgaqNd37S8G2dns3rOeF1OYaaxxeXwAFYIuWnG+BBnKUU\/a6AdIqJhR3trKHX7hNlPVHVCRi\/7Jzlm8AQHj\/ovKZxcSTDpxY32Sv+dTo6lyb\/vaFd","sign":"Mt+R2Q5Y4ov3O8ivl9WtgPxi\/n7JdRNy12x\/5\/cp21WIfub0o5\/sRSZTFsCAyzb\/BuP\/2e031qYmV345pXLyte0fTwId2KdBG8djd6A+bphq5LwAhdcmd4XDH7Z76wHybH\/QFdE2QeVc+c3iBbw1\/MR4EUebQhVE2DwVV0qhA\/3DraR7rpI0KqM2FnjRe8CfWjHlUqWg409LxH39xc797rRPs921GUbRIEPDshVu6eMx2225J7f38u1Vv5nVzRsBOZb68oz2Ewos869wLZAYF+q6Ci\/OL9vMqhvDTk4LgS8C3vB993nRoILkvpzLkHkJbSyHStKC7H5swARcNxJNjg=="}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
