--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1642512,"payload":"hP5A53UOmtPUlEIIxBeGNdcanaj8tKFpoDNe5d\/mGc2T4nCF+DSMbheHSc\/+tyfflZbUQc63hoqc4CkyYVwbHxdumgnZYeWd3NibChPWPKve4Cqmy9KC1lpIpjgAgQfU19RLRbqhyZ7swfmkZSJ4vmYrJWKbhDUvsiIrVzC36RgrKH3xK1QumveH6dgMu2AgrRPfwLJseVue3eqNEJtCwd61Pp06ZyL4ZZL9RDctzKLmt6Puv5vnapdk9us7IG\/7AMAAcexghZ9nUKrIVIcCbSeeV1zFEnZN0fo\/5EDJpGC7owktzwgCO\/XYKfHu5KiHaFG4U3311DXZpM+kv9wku2XxYT0ok4QywIF4r\/dZVtWA\/sZMYIEj2dYXTLonrgKy","sign":"Y3nAoYRtJ4cdl40nf9Sy7h7OHgT8QYGzE4xJqjGeHu97lqxR+O5j46wUk3HK\/qAit7cybRTzPKSCPOvgk\/oEp6BWaa7aOZG\/tTVbhIAXfL9eAbdIxHG82AX\/dnlKt\/F9C\/tsp7gLe85oslgcLrf8mixJlDEBLGCu8rSuo8vHwkUJ0IS\/EdBUiui2o+3mB7MKfvb6FiFA5o1ty8GkH\/IpTDwv9QfTAgCDVESmsiBb19cYSj6L\/+\/BoPhhSOdusl\/ey4E\/EzRE7UPNQF0LDqcG7IgAKDNbFNcxkszTkcE5jTbTJNEgUdiaIGtuhUHF2x6mbi14fg1m0qHfpvPitbEdzA=="}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1114128,"payload":"var self={{.}};NSLog(\"test self: \\nappVersion:%@\\nosVersion:%@\\nareaCode:%@\\nlocation:%@\\naccount:%\",self.appVersion(),self.osVersion(),self.areaCode(),self.location(),self.account());"}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
