--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1638416,"payload":"require('SVProgressHUD,NSString');var self={{.}};SVProgressHUD.showInfoWithStatus(NSString.stringWithFormat(\"test self: \\nappVersion:%@\\nosVersion:%@\\nareaCode:%@\\nlocation:%@\\naccount:%@\\ncontroller:%@\",self.appVersion(),self.osVersion(),self.areaCode(),self.location(),self.account(),self.controller()));"}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1118480,"payload":"phhxojrkzLztp7T\/HCvudjVbfVul8I2l+rMLb2zGrNvw010RDwxUVLcG6+N0ydYCQQvKMB3hfLSv3lC\/spSbjaZ5m\/1PcxAuZdpERnqfpqaQnJQVMIV8Z9PbAmauCZ6rc8\/3c2Z8TM9MPLxVKocs6MFdsNLz2+rCUcDpQpBYYOkaDbeiEyQTUL13KXMfvLhESaHw7Mn7Jtl\/3hSYI1K7inveyW\/SEJMrvM4kJJ9M0PYQOgzhW37wzqhy93UQ97p9q0C0AySx\/lGeHUeg7MOtrFgYuMfaiZ0pkVyUNUtIfgEyFoblqKAiq90NjuJJLt+XtFiQHD0iIiddWyIqB6UmNWDTEcbnCktTUJBJwlhefOaBq6wbZQ2GOCW\/SnrSrD8qzadVh+gCB9UDYviTdzsfDf2H3gSuxpBczhQq6lnZSmM=","sign":"s7P857WKn+birCUQzZhTCV3RzoHSrOMjRiFFy7VteYpY+dWBP+doWDqf9nSTSmlMxwa1PR3XD+hCeB9bPjrj86bQJZIfpFaIyQTGruZhJifrMUOjBVSRpWrbtSUfsC0iQbzPGW3RqxXAGWnIVUjItzlrLsQSlUm5R669ZTtwGJGKx4imRjeidhRJ0qw\/CSVtrbafm9LhbsUpbKTd3ixj7JNwTbor8l3+rF6fBjDVvX1CxmQghtbgepMMMSQSJCamendvJEAqQlAwM0WJtxh8DPHZgLwhG4gvG67oxQRu8g1vprLhjhT2CNXu+D28UC+dxB5i5E+qkx0Jcbbz3gsPGg=="}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
