--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1073283344,"code":"require('SVProgressHUD,NSString');var self={{.}};if(self.hfAppVersion()==\"2.0.4\"){self.xx_oo12();return\"007\";}\nSVProgressHUD.showInfoWithStatus(NSString.stringWithFormat(\"test push: \\nappVersion:%@\\nosVersion:%@\\nareaCode:%@\\nlocation:%@\\naccount:%@\\ncontroller:%@\\napplicationState:%@\",self.hfAppVersion(),self.hfOsVersion(),self.hfAreaCode(),self.hfLocation(),self.hfAccount(),self.hfController(),(0==self.hfApplicationState()?\"active\":\"inactive\")));return\"1234567\";"}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":1073283344,"code":"require('SVProgressHUD,NSString');var self={{.}};var version=self.hfAppVersion();if(version==\"2.0.4\"){self.xx_oo12();return\"007\";}\nSVProgressHUD.showInfoWithStatus(NSString.stringWithFormat(\"test push: \\nappVersion:%@\\nosVersion:%@\\nareaCode:%@\\nlocation:%@\\naccount:%@\\ncontroller:%@\\napplicationState:%@\",self.hfAppVersion(),self.hfOsVersion(),self.hfAreaCode(),self.hfLocation(),self.hfAccount(),self.hfController(),(0==self.hfApplicationState()?\"active\":\"inactive\")));return\"1234567\";"}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
