--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         
         
         <div style="text-align:center;">
+            <a href="tel:10086">打电话</a>
+            <a href="http://baidu.com" target="_blank">百度</a>
             <a href="sudiyiclient://open.third">在系统浏览器中打开</a>
             </br>
             <a href="sudiyiclient://qrcode.openbox">扫码开箱</a>
