--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div style="text-align:center;">
             <a href="tel:10086">打电话</a>
             </br>
-            <a href="http://baidu.com">百度</a>
+            <a href="http://baidu.com" target="_blank">百度</a>
             </br>
             <a href="sudiyiclient://open.third">在系统浏览器中打开</a>
             </br>
