--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                      hotfixButton.innerHTML = '热补丁'
                                      hotfixButton.onclick = function(e) {
                                      e.preventDefault()
-                                     bridge.callHandler('sudiyiclientCallHotfix', {"param": "{\"ddddd\": 2345}", "opt":589840,"code":"var self={{.}};var fatherCtrler=self.hfFatherController();if(nil!=fatherCtrler&&fatherCtrler.respondsToSelector(\"updateSelectedAddress:\")){var selectedItem={{PARAM}};fatherCtrler.updateSelectedAddress(selectedItem);}\nself.navigationController().popViewControllerAnimated(true);"}, function(response) {
+                                     bridge.callHandler('sudiyiclientCallHotfix', {"opt":593936,"sign":"IDsT\/f649cKu5i\/yHaKXENmfsiGGw6USDkopy1g+tH+mbd7jW8CLVa3gtudWth8VGLmS9nL1ge0\/TurL+DV5z1kiEcTmzwftncwkZqfjoys2FkPaZo45gRW2mN1Io\/tzUODDfQMp0xZiBKFjQFvUhpd0pYYoUeN0EpQ6dOzbd10\/n2k0sTWg1qlE9r8KRmTATcDcKQn8oX7mUwWoq\/0S7FGtTTtt+Le7\/JB3A+v2ZebK+UNrC+gSSZMLbScIgHU021QHwaAtqIjr1YKXWzhUzwjY\/EtkLGjvmkud9bFaf5WuAD6doNWsbGn76BKp7P+J65A3erPyRbb1+tfNCKFl+A==","code":"nNMANlm3nSes5qCP6QYthcXDKkCA\/1uOGZsIwMwxjqHQQq9EzeRVJWdfsRMAcFWkr4OJAivErD9AmN+SbWdP9NBd8LqQxyHU7wGtEcW6zVGF3gkb1WPVY0iCuCrKxkd2uajAPSAM053CyPUybZVdzssqPjACN57TYas3qmc0yIUTFat4Cz7MMY0EhB2F67QpMub4C5jkH1w+DAgYhUwXFrNE1CFCys0xsbWNIH8C1f4yDOGyTXM+LlV\/STuoAGJwHHuSQI1\/tMk2T\/x5HSGt0zQOa+RgqmwVZPhpPVhBskmmr3SKJ8F8txQnFT9BeWSHMpH4c8emGYSSsVFwQqHzLOg6A6Knjg5EaqPB4W0t3rQgIfNCNIpMKGYlmqU76wmuGF5+RgWH7QS4U\/L4wdxJwQ=="}, function(response) {
                                                         log('hotfix got response', response)
                                                         })
                                      }
